@@ -1,3 +1,7 @@
+2002-09-15  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b7
+
+	* Added setup/check_imagemagick.php (forgot to do it as part of -b6)
+
 2002-09-14  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b6
 
 	* Gallery now supports ImageMagick, thanks to a patch from Vallimar!
